Minor enhancement and bug fix release